DOC Adds durations

--- a/notebooks/01-pandas-output.ipynb
+++ b/notebooks/01-pandas-output.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c36ae6e9-6233-4950-a3b1-41fce70fec83",
    "metadata": {
@@ -44,6 +45,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "71c83328-28e9-4842-8c6e-11541e1cecbc",
    "metadata": {},
@@ -104,6 +106,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "445c284d-de65-41c2-bea1-6699b30d3c68",
    "metadata": {},
@@ -137,6 +140,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "df6a7986-1c78-404b-a099-63c050aef6b5",
    "metadata": {},
@@ -158,6 +162,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a2371b6d-9321-4be8-8978-0f6b75898d46",
    "metadata": {},
@@ -233,11 +238,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f9029cba-72a7-4529-b3e7-4e5b17140395",
    "metadata": {},
    "source": [
     "## Exercise 1\n",
+    "**~ 4 minutes**\n",
     "\n",
     "1. The Wisconsion cancer data set is loaded into `X` and `y`.\n",
     "1. How many features are there in the dataset?\n",
@@ -276,6 +283,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c230761-73df-4f48-a7fa-b1b5a9c832c2",
    "metadata": {},
@@ -296,11 +304,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3250d55a-da27-4dc5-a1cb-97e6b626fdaa",
    "metadata": {},
    "source": [
     "## Exercise 2\n",
+    "**~ 5 minutes**\n",
     "\n",
     "1. Build a pipeline named `pipe`, with the `StandardScaler`, `KNNImputer(add_indicator=True)`, and `LogisticRegression` and configured for pandas output.\n",
     "1. Train the pipeline on the Wisconsion cancer training set and evaluate the performance of the model on the test set.\n",
@@ -332,6 +342,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e216aa3a-cfc4-48d5-a112-78e084d32b1b",
    "metadata": {},
@@ -352,6 +363,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5e5b51df-84b7-4db3-97c6-88ff72f01929",
    "metadata": {},
