--- a/notebooks/02-categorical-data.ipynb
+++ b/notebooks/02-categorical-data.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ce569fcc-9b9f-43b5-8f5b-a93723c3b9c8",
    "metadata": {
@@ -44,6 +45,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "66504124-92c1-481b-b0c1-7854d282deac",
    "metadata": {},
@@ -69,6 +71,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "93c73146-0f11-4e0c-9d5d-79d59b560966",
    "metadata": {},
@@ -141,6 +144,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b6d537da-a6a6-4a49-8ebb-2aff4ab13294",
    "metadata": {},
@@ -179,6 +183,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "932f656c-bedd-45e4-bb48-05069b68ce79",
    "metadata": {},
@@ -223,6 +228,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bf5508d7-0422-4254-b0db-bc6c11d69146",
    "metadata": {},
@@ -247,6 +253,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf88eea0-bd8b-4012-8bcf-c3ef3c91e205",
    "metadata": {},
@@ -279,6 +286,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "128abc36-258a-439c-9531-efc5a6aede22",
    "metadata": {},
@@ -324,6 +332,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dd11d668-63e7-4e80-85e4-4d44dde830b8",
    "metadata": {},
@@ -360,6 +369,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "59045ecc-828b-4dd2-ab4e-7c08454d3d8a",
    "metadata": {},
@@ -394,6 +404,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4722d5bb-1a03-43b0-ad06-ecc36d135faa",
    "metadata": {},
@@ -441,6 +452,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "64bb2967-6c4f-4d1a-8662-57ea5ba80bbc",
    "metadata": {},
@@ -449,6 +461,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "768ddd03-b6a1-45e0-81c7-ae294b288ad8",
    "metadata": {},
@@ -474,6 +487,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "67e13a0d-92b4-4750-8b0a-10dabd499b50",
    "metadata": {},
@@ -512,6 +526,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e2d18f1e-f068-4634-a59d-1d346a93a50d",
    "metadata": {},
@@ -549,6 +564,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "625a5348-f3f9-4224-8cc1-a953233149f2",
    "metadata": {},
@@ -586,6 +602,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "36ff816a-bc88-4bce-8454-d96d58571e0f",
    "metadata": {},
@@ -642,6 +659,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fc159d4d-7015-488b-a884-2d63fd56cfaf",
    "metadata": {},
@@ -674,6 +692,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bb70e6c3-1e39-4898-838c-f97ead283b36",
    "metadata": {},
@@ -701,6 +720,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "29e118e1-bdfc-49c8-9891-c23f58eb289b",
    "metadata": {},
@@ -737,6 +757,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c42bb131-9835-4f64-832c-71b7e2d3e7fc",
    "metadata": {},
@@ -769,6 +790,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "35f98b4c-0747-4097-9863-5c636bc79eb4",
    "metadata": {},
@@ -831,6 +853,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e47723e0-345e-4eff-8d16-9871c2d2f880",
    "metadata": {},
@@ -887,6 +910,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7eeb23d5-953e-4548-bd62-496cae63557c",
    "metadata": {},
@@ -895,6 +919,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e4b3faf8-86ca-4b1d-8e28-a194a1179693",
    "metadata": {},
@@ -957,6 +982,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c32d293-93cd-4222-a9bd-819412414cce",
    "metadata": {},
@@ -1017,6 +1043,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0aa73b3e-e845-4856-a2fa-22418bfdbe9c",
    "metadata": {},
@@ -1076,11 +1103,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "630c98d1-fb9d-4a4c-a694-80af9171cc46",
    "metadata": {},
    "source": [
     "## Exercise 1\n",
+    "**~ 3 minutes**\n",
     "\n",
     "1. The Penguin dataset is loaded into `X` and `y`.\n",
     "1. Is `y` a classification or regression problem?\n",
@@ -1116,6 +1145,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e753a47a-8195-4433-821f-0b466330a328",
    "metadata": {},
@@ -1136,11 +1166,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5240bc4a-9f90-4fa7-be05-d24a402141cf",
    "metadata": {},
    "source": [
     "## Exercise 2\n",
+    "**~ 7 minutes**\n",
     "\n",
     "1. Use `train_test_split` to split data into a training and test set.\n",
     "    - **Hint:** Use `random_state=0` and `stratify`\n",
@@ -1162,6 +1194,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7eddb437-e693-42cd-8de7-673d10e03cb0",
    "metadata": {},
