--- a/notebooks/04-model-evaluation.ipynb
+++ b/notebooks/04-model-evaluation.ipynb
@@ -240,6 +240,7 @@
    "metadata": {},
    "source": [
     "# Exercise 1\n",
+    "**~ 3 minutes**\n",
     "\n",
     "1. Fit a `sklearn.ensemble.RandomForestClassifier` model on the training set.\n",
     "    - **Hint**: Use `random_state=0`\n",
@@ -548,6 +549,7 @@
    },
    "source": [
     "## Exercise 2\n",
+    "**~ 4 minutes**\n",
     "\n",
     "1. Plot the roc curve of the logistic regression model and the random forest model on the same axes.\n",
     "2. Train a `sklearn.dummy.DummyClassifier()` on the training dataset and plot the precision recall curve and the roc curve with the test dataset.\n",
@@ -860,6 +862,7 @@
    "metadata": {},
    "source": [
     "## Exercise 3\n",
+    "**~ 3 minutes**\n",
     "\n",
     "1. Compute the `roc_auc_score` for the random forest on the test set.\n",
     "    **Hint**: Use `predict_proba`.\n",
@@ -1341,11 +1344,12 @@
    "metadata": {},
    "source": [
     "## Exercise 4\n",
+    "**~ 4 minutes**\n",
     "\n",
     "1. Create and train a `HistGradientBoostingRegressor` model.\n",
     "1. Evaluate the model on the test set using `score`.\n",
     "1. Plot the permutation importance for the gradient boosting model with `n_repeats=5` and `random_state=0`.\n",
-    "1. How does the permtuation feature imporatance compare to random forest?"
+    "1. How does the permutation feature importance of gradient boosting compare to random forest?"
    ]
   },
   {
@@ -1594,6 +1598,7 @@
    "metadata": {},
    "source": [
     "## Exercise 5\n",
+    "**~ 7 minutes**\n",
     "\n",
     "1. Get the permutation importance of the gradient booster (`hist`) using `permutation_importance` and `scoring=\"neg_mean_absolute_error\"`.\n",
     "    - Store the permutation importance in `hist_perm_results` variable.\n",
