--- a/notebooks/03-parameter-tuning.ipynb
+++ b/notebooks/03-parameter-tuning.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "617dbbe4-2ec5-4667-9478-0f4445198b49",
    "metadata": {
@@ -44,6 +45,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d22fe247-e24d-46a5-a121-6b473606af07",
    "metadata": {},
@@ -194,6 +196,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dbcac0ef-8dd8-4526-9cef-f9d9f348fa14",
    "metadata": {},
@@ -283,11 +286,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "772db959-1ae8-4a85-8c89-086c074ae010",
    "metadata": {},
    "source": [
     "## Exercise 1\n",
+    "**~ 7 minutes**\n",
     "\n",
     "1. Use a `RandomSearchCV` with the following parameter distrubution for `RandomForestClassifier`:\n",
     "\n",
@@ -339,6 +344,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "40716291-90a1-4b32-bcd5-f1a2e29056d4",
    "metadata": {},
@@ -359,6 +365,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "afe21a0b-5fbb-4bf9-838e-0023c43cd8ac",
    "metadata": {
@@ -403,6 +410,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cebce839-c9f4-4921-aa5c-6c46897c4ccc",
    "metadata": {},
@@ -439,6 +447,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1387cd29-14dd-4feb-a178-fe06d9d47fb1",
    "metadata": {},
@@ -463,6 +472,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9e645e0d-e71b-4200-95cb-4b8411c14874",
    "metadata": {},
@@ -484,6 +494,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d109f04-ffca-4c11-9c3e-44dc3ea51422",
    "metadata": {},
@@ -519,6 +530,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "852f75a5-d195-4cf9-b545-1b8757af0fda",
    "metadata": {},
@@ -545,6 +557,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "720938ff-ccc9-4c4f-a572-30d9212bde9e",
    "metadata": {},
@@ -644,6 +657,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7301d0b5-41cf-434c-b110-42a3359c8ecb",
    "metadata": {
@@ -651,6 +665,7 @@
    },
    "source": [
     "## Exercise 2\n",
+    "**~ 7 minutes**\n",
     "\n",
     "1. A `column_transformer` is provided to preprocess the penguin dataset. Call `fit_transform` on `X_train` and store the output as `X_train_transformed`.\n",
     "1. Are there missing values in the transformed dataset?\n",
@@ -695,6 +710,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8711787f-f27d-4a29-9ef6-c846f14795b2",
    "metadata": {},
